k8s/longhorn/longhorn-ingress.yaml
##
## NOT RECOMMENDED FOR PRODUCTION USE - THIS IS FOR TESTING ONLY
##
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      ingress.kubernetes.io/secure-backends: "true"
      kubernetes.io/ingress.class: traefik
    labels:
      app: longhorn-ingress
    name: longhorn-ingress
    namespace: longhorn-system
  spec:
    rules:
    - host: longhorn.dti.ctex.eb.mil.br
      http:
        paths:
        - backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - longhorn.dti.ctex.eb.mil.br
      secretName: longhorn.local-tls
